Update api/openapi/swagger.yaml, api/swagger_server/swagger/swagger.yaml, file_controller.py, editing_vocabulary.py, EditingVocabulary.js, DialogSettingSynonym.js, 1_createdb.sql - URI always uses PreferredLabels id and Not yet supported when PreferredLabel is missing
